--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">UFOTerminal</string>
-    <string name="not_connected">使い方\n\nUFOSAの電源を入れる\n↓\n接続ボタンを押す\n↓\n接続完了\n↓\nUFOSAを自由に操作‼</string>
+    <string name="not_connected">～ 使い方 ～\n\nUFOSAの電源を入れる\n↓\n接続ボタンを押す\n↓\n接続完了\n↓\nUFOSAを自由に操作‼</string>
     <string name="connect">接続</string>
     <string name="disconnect">切断</string>
     <string name="connecting">接続中です…</string>
@@ -42,14 +42,17 @@
     <string name="record_rename_message">操作記録ファイルの新しい名前</string>
     <string name="confirm_record_delete_title">記録データ削除</string>
     <string name="confirm_record_delete_message">本当に記録したデータを削除しますか？</string>
+    <string name="confirm_record_overwrite_title">記録の上書き</string>
+    <string name="confirm_record_overwrite_message">同じ名前のファイルがあります．\n上書きしますか？</string>
     <string name="play_header">再生</string>
     <string name="play_start">再生</string>
     <string name="play_pause">一時停止</string>
+    <string name="play_back_origin">最初に戻る</string>
     <string name="play_back_1">←1.0</string>
     <string name="play_forward_1">1.0→</string>
     <string name="play_forward_5">5.0→</string>
     <string name="play_forward_10">10.0→</string>
-    <string name="play_send_record">記録をメールで送信</string>
+    <string name="play_send_record">記録を共有</string>
     <string name="play_send_record_address">送信先メールアドレス</string>
     <string name="play_send_record_ok">送信</string>
     <string name="play_send_record_cancel">キャンセル</string>
